--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="menu_2">Setting</string>
 
     <string name="dark_mode">Dark Mode</string>
+    <string name="jembut">Jembut</string>
 </resources>
